# amos2024ss06-health-ai-framework

./: .dockerignore  .env.template  .firebaserc  .gitignore  .pre-commit-config.yaml  Apptainer.def  Dockerfile  README.md  app.config.js  app.json  babel.config.js  biome.json  config.json  eas.json  firebase.json  metro.config.js  package.json  pyproject.toml  recipes.json  ruff.toml  tatus  tsconfig.json
.github/: issue-branch.yml  release-drafter.yml
.github/workflows/: biomejs.yml  check_codestyle.yml  checkout_instructions.yml  create_link_issue_branch.yml  draft_helper.yml  eas_android.yml  eas_ios.yml  review_request.yml  ruff.yml  verify_labels.yml
Deliverables/: feature-board.tsv
Deliverables/sprint-01/: feature-board.csv
Deliverables/sprint-02/: imp-squared-backlog.tsv
Deliverables/sprint-03/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-04/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-05/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-06/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-07/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-08/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-09/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-10/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-11/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-12/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-13/: project-summary.docx
Documentation/: hpc_setup.md
Documentation/Demo_Videos/: basic_visual_navigation.mkv
Documentation/Demo_Videos/sprint08/: integrate-drawer-demo.m4v
Documentation/Demo_Videos/sprint09/: chat_integration.m4v
Documentation/Demo_Videos/sprint10/: create_new_chats.m4v
Documentation/Demo_Videos/sprint11/: 214_download_google_docs.m4v  AIResponseChatLogic.m4v
Documentation/Demo_Videos/sprint12/: MultipleLLMQueries_VoiceReadingMutable.m4v  chatBubbleIntegration.m4v
Documentation/Firebase/: functions.md
Documentation/WikiPages/BuildnRunExpoApp/: ExpoWiki.md
Documentation/WikiPages/Firestore DB/: FirebaseDBWiki.md
chroma_db/: chroma.sqlite3
functions/: .env.template  chain.py  config.py  get_google_docs.py  handlers.py  main.py  requirements.txt  store.py
src/: config.json  config.py
src/DropDownMenu-WIP/: CustomDrawerContent.tsx  CustomHeader.tsx  DropDownMenu.tsx  index.tsx
src/Pubmed/: pubmed_scraping.py  test.ipynb
src/backend/: __init__.py
src/backend/Config/: __init__.py  config.py  main.py
src/backend/Database/: database.py  main.py
src/backend/Orchestrator/: main.py  orchestrator.py
src/backend/ScrappingTarget/: all_recipes_target.py  archive_target.py  base_target.py  nutrition_target.py  podcast_target.py  pubmed_target.py  youtube_target.py
src/backend/Types/: __init__.py  all_recipes.py  archive.py  base_type.py  nutrition.py  pod_cast.py  pub_med.py  you_tube.py
src/backend/Utils/: splitter.py
src/backend/data_acquisition/: config.json  config.py  orchestrator.py  scraping_data_element.py  scraping_db.py
src/backend/log/: log.py
src/backend/podcast/: podcast_text_20240507_191423.json
src/backend/scrapper/: you_tube.py
src/backend/utils/: file_utils.py
src/bau_stelle/: NavigationDrawer.tsx
src/bau_stelle/components/: ChatUI.tsx
src/bau_stelle/mui/: MuiDrawer.tsx  index.tsx
src/data_pipeline/data_acquisition/: config.json  config.py  orchestrator.py  scraping_data_element.py
src/frontend/: App.tsx  AppNavigation.tsx  index.ts
src/podcast_scraper/: podcast_scraping.ipynb  podcast_transcriptions.json
(+139 files in other folders)
