[project]
name = "health-ai-framework"
version = "0.1.0"
description = "Framework to create a custom AI agent."
authors = [{ name = "Preet Vadaliya", email = "preetvadaliya@gmail.com" }]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "bs4>=0.0.2",
    "jupyter>=1.0.0",
    "google-cloud>=0.34.0",
    "google>=3.0.0",
    "google-cloud-speech>=2.26.0",
    "pocketsphinx>=5.0.3",
    "SpeechRecognition>=3.10.3",
    "pydub>=0.25.1",
    "ffmpeg>=1.4",
    "sox>=1.5.0",
    "beautifulsoup4>=4.12.3",
]

[tool.pdm.dev-dependencies]
linting = ["ruff>=0.4.2", "pre-commit>=3.7.0"]

[tool.pdm.scripts]
post_install = "pre-commit install"
prettify = "ruff check --fix"

[tool.pdm]
distribution = false
